# scotch

./: .gitignore  Bindings.hs  Calc.hs  Eval.hs  Exceptions.hs  Expressions.hs  Hash.hs  Parse.hs  ParseBase.hs  README.markdown  Read.hs  ReadFile.hs  Stdlib.hs  Substitute.hs  Types.hs  build  build_deb.sh  build_winstaller.bat  control  control_temp  scotch.cabal  scotch.hs  scotch.lang  test.sco  winstaller.nsi
Scotch/: Config.hs
Scotch/Config/: Paths.hs
Scotch/Eval/: Calc.hs  Eval.hs  ReadFile.hs  Substitute.hs
Scotch/Lib/: GenStdLib.hs  StdLib.hs
Scotch/Parse/: Expressions.hs  Parse.hs  ParseBase.hs
Scotch/Types/: Binary.hs  Bindings.hs  Exceptions.hs  FFI.hs  Hash.hs  Interpreter.hs  Show.hs  Types.hs
docs/: build.html  build.markdown  scotch.html  scotch.markdown
scotch.lib/scotchy/: eval.sco  main.sco  parse.sco
scotch.lib/std/: about.sco  copyright.sco  decimal.sco  fraction.sco  info.sco  lib.sco  license.sco  math.sco  startup.sco  unit.sco  units.sco  version.sco
scotch.lib/std/math/: algebra.sco  calculus.sco  infinity.sco  main.sco
scotch.std/: lib.sco
std/: lib.sco  math.sco
